# fastlatex

./: .env  .gitignore  AGENTS.md  LICENSE  README.md  biome.json  docker-compose.yml  index.html  lefthook.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  wasm-build.yml
docs/: api.md  architecture.md  develop.md  engine.md  howto.md  metadoc.md  plan.md  texlive-upgrade.md
e2e/: bibtex.spec.ts  inverse-search.spec.ts  iteration1.spec.ts  iteration2.spec.ts  iteration3.spec.ts  perf-benchmark.spec.ts  preamble-snapshot.spec.ts  readfile.spec.ts  synctex-e2e.spec.ts
public/: sw.js
public/sample/: introduction.tex  main.tex  refs.bib
public/swiftlatex/: swiftlatexbibtex.js  swiftlatexpdftex.fmt  swiftlatexpdftex.js  swiftlatexpdftex.wasm
scripts/: bundle-texlive.mjs  compress-assets.mjs  download-engine.sh  extract-format.mjs  sync-texlive-s3.sh
src/: editor-runtime.css  fastlatex.ts  index.ts  latex-editor.ts  main.ts  styles.css  types.ts
src/__mocks__/: monaco-editor.ts
src/editor/: setup.ts
src/engine/: base-worker-engine.ts  bibtex-engine.ts  compile-scheduler.test.ts  compile-scheduler.ts  parse-errors.test.ts  parse-errors.ts  preamble-utils.test.ts  preamble-utils.ts  swiftlatex-engine.ts  tex-engine.ts  warmup.ts
src/fs/: persistent-fs.ts  virtual-fs.ts  (+1 more)
texlive-server/: app.py  pyproject.toml  wsgi.py
wasm-build/: Dockerfile  Makefile  bibtex-entry.c  bibtex-worker-template.js  build.sh  kpse-hook.c  library.js  trace-hook.c  trigger.txt  wasm-entry.c  worker-template.js
(+54 files in other folders)
